--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:allowBackup="true"
@@ -15,7 +17,8 @@
         android:theme="@style/Theme.TaskIT"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
-        <activity android:name=".Sample2Activity"></activity>
+        <activity android:name=".MsgActivity" />
+        <activity android:name=".Sample2Activity" />
         <activity android:name=".SampleActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
